--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.3",
   "description": "Service that generates warning emails when no complaints are sent during the day",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lblod/complaint-form-warning-service.git"
@@ -15,5 +12,18 @@
   "dependencies": {
     "@lblod/mu-auth-sudo": "^0.2.0",
     "cron": "^1.8.2"
+    "env-var": "^7.4.1",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.0"
+  },
+  "scripts": {
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --cache --fix",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
