--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "lblod",
   "license": "MIT",
   "dependencies": {
-    "@lblod/mu-auth-sudo": "^0.2.0",
-    "cron": "^1.8.2"
+    "@lblod/mu-auth-sudo": "^0.6.1",
+    "cron": "^3.1.6",
     "env-var": "^7.4.1",
     "uuid": "^9.0.1"
   },
